--- a/package.json
+++ b/package.json
@@ -36,13 +36,16 @@
     "@material-ui/core": "4.9.13",
     "@material-ui/icons": "4.9.1",
     "@zeit/next-sass": "1.0.1",
+    "axios": "^0.19.2",
     "classnames": "2.2.6",
+    "material-ui-popup-state": "^1.6.1",
     "moment": "2.25.3",
     "next": "^9.4.5-canary.18",
     "next-compose-plugins": "2.2.0",
     "next-images": "1.3.1",
     "nextjs-redirect": "2.0.2",
     "node-sass": "4.14.1",
+    "nodemailer": "^6.4.10",
     "nouislider": "14.4.0",
     "path": "0.12.7",
     "prop-types": "15.7.2",
