--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "16.13.1",
     "react-datetime": "2.16.3",
     "react-dom": "16.13.1",
+    "react-ga": "^3.1.2",
     "react-photo-collage": "^1.0.7",
     "react-slick": "0.25.2",
     "react-swipeable-views": "0.13.9",
