--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "next": "^9.4.5-canary.18",
     "next-compose-plugins": "2.2.0",
     "next-images": "1.3.1",
+    "next-seo": "^4.7.3",
     "nextjs-redirect": "2.0.2",
     "node-sass": "4.14.1",
     "nodemailer": "^6.4.10",
