--- a/package.json
+++ b/package.json
@@ -40,11 +40,15 @@
     "@zeit/next-sass": "1.0.1",
     "axios": "^0.19.2",
     "classnames": "2.2.6",
+    "image-trace-loader": "^1.0.2",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^8.0.0",
     "material-ui-popup-state": "^1.6.1",
     "moment": "2.25.3",
     "next": "^9.4.5-canary.18",
     "next-compose-plugins": "2.2.0",
-    "next-images": "1.3.1",
+    "next-optimized-images": "^2.6.2",
     "next-seo": "^4.7.3",
     "nextjs-redirect": "2.0.2",
     "node-sass": "4.14.1",
@@ -59,7 +63,9 @@
     "react-photo-collage": "^1.0.7",
     "react-slick": "0.25.2",
     "react-swipeable-views": "0.13.9",
+    "responsive-loader": "^2.0.2",
     "styled-components": "5.1.0",
+    "webp-loader": "^0.6.0",
     "webpack": "4.43.0"
   }
 }
