--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ services:
   livinglab-site-v3:
     image: livinglab-site-v3
     ports:
-    - 10001:3000
+    - 10002:3000
+    restart: always
     expose:
     - "3000"
     environment:
