--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# mkdocs build
+mkdocs/
+
+
 #image optimizer
 /image-optimizer/input/*
 /image-optimizer/outputNormal/*
