--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -3,10 +3,8 @@ name: Publish docs via GitHub Pages
 on:
   push:
     branches:
-      - main
-  pull_request:
-    branches:
-      - main
+      - master
+  workflow_dispatch:
 
 jobs:
   build:
