--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -12,9 +12,10 @@ jobs:
     name: Deploy docs
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - name: Check out repository
+        uses: actions/checkout@v1
       - name: Deploy docs
-      - uses: actions/setup-python@v2
+        uses: actions/setup-python@v2
         run: pip install -r "${GITHUB_WORKSPACE}/${CONFIG_FOLDER}/requirements.txt" && mkdocs gh-deploy --config-file "${GITHUB_WORKSPACE}/${CONFIG_FOLDER}/mkdocs.yml" --force
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
