--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,8 +14,9 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v1
-      - name: Deploy docs
+      - name: Get Python
         uses: actions/setup-python@v2
+      - name: Deploy Docs
         run: pip install -r "${GITHUB_WORKSPACE}/${CONFIG_FOLDER}/requirements.txt" && mkdocs gh-deploy --config-file "${GITHUB_WORKSPACE}/${CONFIG_FOLDER}/mkdocs.yml" --force
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
