--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
+/test_results
+/cypress/screenshots
+/cypress/videos
+
 # dependencies
 /node_modules
 
