--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
+    "cypress:run": "cypress run --env allure=true",
+    "env:import": "export $(cat .env | xargs)",
+    "allure:send": "npm run env:import && python send_and_generate.py livinglab-site-v3 $ALLURE_USER $ALLURE_PASSWORD $ALLURE_API_SERVER /test_results github github",
     "ci:test": "start-server-and-test start http://localhost:3000 cypress:run",
     "dev": "next",
     "build": "next build",
