sending and generating allure reports remotely

--- a/.env-sample
+++ b/.env-sample
@@ -3,3 +3,7 @@ SMTP_HOST=<receiving-host>
 SMTP_PORT=<SMTP port>
 SMTP_AUTH_USER=<mailing account@sample.com>
 SMTP_AUTH_PASS=<mail account password>
+
+ALLURE_USER=admin
+ALLURE_PASSWORD=<allure-password>
+ALLURE_API_SERVER=https://allure.systemhealthlab.com/api
