image difference setup

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
   "devDependencies": {
     "@frinzekt/cypress-allure-plugin": "^0.0.1-development",
     "cypress": "^6.3.0",
+    "cypress-plugin-snapshots": "^1.4.4",
     "del": "^6.0.0",
     "move-file": "^2.0.0",
     "start-server-and-test": "^1.11.7"
