Image Difference Regression Testing (#163)
* cypress:open / init

* cypress allure reporter

* sending and generating allure reports remotely

* put the videos in the allure result for uploading

* remove example e2e test

* remove fixtures

* disable google analytics in development

* updated yarn lock file

* image difference setup

* corrected test and better file naming for dif

* testing server without loading google analytics

* image difference responsive

* image difference parameters

* 720p snapshots and segmented screenshot matching

* basic allure test tagging

* initial github action testing

* build before test

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@ mkdocs/
 /image-optimizer/outputNormal/*
 /image-optimizer/outputTransparent/*
 
+/test_results
+/cypress/screenshots
+/cypress/videos
+
 # dependencies
 /node_modules
 
