--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "NextJS Version of Material Kit React by Creative Tim (https://creative-tim.com)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "next",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run --env allure=true",
+    "allure:send": "export $(cat .env | xargs) && python send_and_generate.py livinglab-site-v3 $ALLURE_USER $ALLURE_PASSWORD $ALLURE_API_SERVER /test_results github github",
+    "ci:test": "NODE_ENV=testing start-server-and-test start:test http://localhost:3000 cypress:run",
+    "dev": "NODE_ENV=development next",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production next start",
+    "start:test": "NODE_ENV=testing next start",
     "export": "next export",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && rm -rf .next/ && npm install && npm run dev"
   },
@@ -66,6 +70,14 @@
     "responsive-loader": "^2.0.2",
     "styled-components": "5.2.1",
     "webp-loader": "^0.6.0",
-    "webpack": "5.10.0"
+    "webpack": "4.43.0"
+  },
+  "devDependencies": {
+    "@frinzekt/cypress-allure-plugin": "^0.0.1-development",
+    "cypress": "^6.3.0",
+    "cypress-image-snapshot": "^4.0.1",
+    "del": "^6.0.0",
+    "move-file": "^2.0.0",
+    "start-server-and-test": "^1.11.7"
   }
 }
