--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: "3"
 services:
   livinglab-site-v3:
-    image: livinglab-site-v3
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
     - 10002:3000
     restart: always
