--- a/.env-sample
+++ b/.env-sample
@@ -1,8 +1,13 @@
 MAIL_RECEIVING_ACCOUNT=<receiving-account@sample.com>
 SMTP_HOST=<receiving-host>
 SMTP_PORT=<SMTP port>
-SMTP_AUTH_USER=<mailing account@sample.com>
-SMTP_AUTH_PASS=<mail account password>
+
+# Use this tutorial https://www.youtube.com/watch?v=-rcRf7yswfM&t=188s
+GOOGLE_USER=<REPLACE THIS>
+GOOGLE_OAUTH_CLIENT_ID=<REPLACE THIS>
+GOOGLE_OAUTH_CLIENT_SECRET=<REPLACE THIS>
+GMAIL_ACCESS_TOKEN=<REPLACE THIS>
+GMAIL_REFRESH_TOKEN=<REPLACE THIS>
 
 ALLURE_USER=admin
 ALLURE_PASSWORD=<allure-password>
