--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "axios": "^0.21.0",
     "classnames": "2.2.6",
     "image-trace-loader": "^1.0.2",
+    "imagemin-mozjpeg": "^8.0.0",
     "imagemin-optipng": "^8.0.0",
     "imagemin-svgo": "^8.0.0",
     "material-ui-popup-state": "^1.6.1",
