--- a/package.json
+++ b/package.json
@@ -45,17 +45,16 @@
     "axios": "^0.21.0",
     "classnames": "2.2.6",
     "image-trace-loader": "^1.0.2",
-    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-mozjpeg": "^9.0.0",
     "imagemin-optipng": "^8.0.0",
     "imagemin-svgo": "^8.0.0",
     "material-ui-popup-state": "^1.6.1",
     "moment": "2.29.1",
-    "next": "^9.4.5-canary.18",
+    "next": "12.0.4",
     "next-compose-plugins": "2.2.1",
     "next-optimized-images": "^2.6.2",
     "next-seo": "^4.7.3",
     "nextjs-redirect": "5.0.0",
-    "node-sass": "4.14.1",
     "nouislider": "14.6.3",
     "path": "0.12.7",
     "prop-types": "15.7.2",
