--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@material-ui/core": "4.11.3",
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "@zeit/next-sass": "1.0.1",
     "axios": "^0.21.0",
     "classnames": "2.2.6",
     "image-trace-loader": "^1.0.2",
@@ -52,6 +51,7 @@
     "moment": "2.29.1",
     "next": "12.0.4",
     "next-compose-plugins": "2.2.1",
+    "next-images": "1.7.0",
     "next-optimized-images": "^2.6.2",
     "next-seo": "^4.7.3",
     "nextjs-redirect": "5.0.0",
