--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-slick": "0.28.0",
     "react-swipeable-views": "0.13.9",
     "responsive-loader": "^2.0.2",
+    "sass": "^1.32.8",
     "styled-components": "5.2.1",
     "webp-loader": "^0.6.0",
     "webpack": "4.46.0"
