--- a/package.json
+++ b/package.json
@@ -41,22 +41,16 @@
     "@material-ui/core": "4.11.3",
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "@zeit/next-sass": "1.0.1",
     "axios": "^0.21.0",
     "classnames": "2.2.6",
     "image-trace-loader": "^1.0.2",
-    "imagemin-mozjpeg": "^9.0.0",
-    "imagemin-optipng": "^8.0.0",
-    "imagemin-svgo": "^8.0.0",
     "material-ui-popup-state": "^1.6.1",
     "moment": "2.29.1",
-    "next": "^9.4.5-canary.18",
+    "next": "12.0.4",
     "next-compose-plugins": "2.2.1",
-    "next-optimized-images": "^2.6.2",
+    "next-images": "1.7.0",
     "next-seo": "^4.7.3",
     "nextjs-redirect": "5.0.0",
-    "node-sass": "4.14.1",
-    "nodemailer": "^6.4.10",
     "nouislider": "14.6.3",
     "path": "0.12.7",
     "prop-types": "15.7.2",
@@ -68,6 +62,7 @@
     "react-slick": "0.28.0",
     "react-swipeable-views": "0.13.9",
     "responsive-loader": "^2.0.2",
+    "sass": "^1.32.8",
     "styled-components": "5.2.1",
     "webp-loader": "^0.6.0",
     "webpack": "4.46.0"
